// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format should omit a source code if the error line is over 100 characters 1`] = `
"[foo.js]:const is a reverved word
[1:110] aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = () => {}; // bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
"
`;

exports[`format should return a formatted message 1`] = `
"[foo.js]:const is a reverved word
[2:0] const foo = () => {}
"
`;

exports[`format should return a formatted message if position is null 1`] = `
"[foo.js]:const is a reverved word
"
`;
